Fix/posters incorrectly loading (#51)
* fix: improved posters not loading

* fix: friend name and avatar in incorrect poster place

* fix: movie title overflowing

* fix: film elements not being found

* fix: incorrect popular this week cards

* fix: diary ui is messed up

* fix: big posters not loading

* fix: no poster in popular reviews, reviews, activity

* feat: add micro card to showdowns

* fix: likes small cards not loading

* fix: no posters in lists small cards view

* fix: incorrect spacing of last line film list large cards

* fix: movie posters sometimes not loading

* fix: broken watched  page for samll cards

* feat: add link to friend profile

* chore: add other letterboxd urls to host permissions

* chore: update project version and time

* feat: improve loading experiance for small cards in watched

* feat: redirect films to popular this week

* feat: less opacity to the watched movie fadeout

* fix: watched mvoies opacity reduced even with "fade wached movies" off

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,16 +17,47 @@ body.profile .js-metadatum > svg,
     display: inline-block;
 }
 
-.production-record {
+.production-record, .production-viewing  {
     grid-template-columns: max-content auto !important;
 }
 
 /* Fixes diary content not visible  */
-.diary.films-diary .diary-entry-row .productiondetails {
-    grid-template-columns: [poster] max-content [body] auto !important;
+.diary.films-diary .diary-entry-row .productiondetails, .list-detailed-entries-list .list-detailed-entry {
+    grid-template-columns: [figure] max-content [body] auto !important;
 }
 
 /* Fixes search posters not visible */
 .search-results .search-result .production-viewing {
     grid-template-columns: max-content auto !important;
+}
+
+/* --- List fixes --- */
+
+/* Fix last line of lists with large cards is incorrectly spaced */
+.poster-list.-grid:after {
+    content: none !important;
+}
+
+.poster-list.-p70 {
+    justify-content: flex-start !important;
+    column-gap: 30px !important;
+}
+
+
+.films-watched .poster-grid>.grid.-p70 {
+    --poster-grid-col-size: 260px !important;
+    justify-content: space-between !important;
+}
+
+.films-watched .film-poster{
+    width: auto !important;
+    max-width: 66px;
+}
+
+/* Fix: only movie's posters is faded out when  "fade watched movies" is enabled */
+.hide-films-seen [data-item-name]:has([data-watched="true"]) {   
+    opacity: 0.7;
+}
+.hide-films-seen [data-watched="true"] + .css-film-badge {
+    filter: grayscale(30%);
 }
